<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        android:orientation="vertical"
             tools:context=".DetailCategoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/tv_dtl_satu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"/>

    <TextView
            android:id="@+id/tv_dtl_dua"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"/>
<Button
        android:text="@string/to_profile"

        android:id="@+id/btn_dtl_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button

            android:text="@string/show_dialog"

            android:id="@+id/btn_dtl_dua"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>